tests/compile_fail/from/multiple_struct_attributes.stderr
error: only single kind of `#[from(...)]` attribute is allowed here
 --> tests/compile_fail/from/multiple_struct_attributes.rs:3:1
  |
3 | #[from(forward)]
  | ^
